# ptcryspg4

./: .gitignore  CLAUDE.md  DATA_REORG_PLAN.md  MIRD_HEAD_PLAN.md  README.md
analysis_transport/: bragg_profile.py  check_run.py  compare_beams.py  make_figures.py  parodi_cross_check.py  plot_depth_dose.py  plot_dose_activity.py  plot_geometry.py  plot_mird_head.py  plot_phantom.py  positron_range_outliers.py  sobp_metrics.py  validate_transport.py
common/: Isotopes.hh  SCHEMA.md  isotopes.py  phantom_material.py  regions.py
decay_sampling/: activity_plot.py  budget.py  budget_gen.py
docs/: crysp_for_ht.tex  handoff.tex  proton_therapy.txt  ptet_doses_mc.txt  scenario_format.tex  simulate_pt_pet.tex  sobp.tex
field_design/: plot_sobp.py  sobp.py  test_field.py
latex/: 01_user_guide.tex  02_beam_design.tex  biblio.bib  (+3 more)
stageA_transport/: CMakeLists.txt  proton_transport.cc
stageA_transport/include/: ActionInitialization.hh  BeamConfig.hh  BeamMessenger.hh  DetectorConstruction.hh  DetectorMessenger.hh  EmitterData.hh  EventAction.hh  OutputMessenger.hh  PrimaryGeneratorAction.hh  RunAction.hh  StageAConfig.hh  StageARun.hh  SteppingAction.hh  TrackingAction.hh
stageA_transport/macros/: cylinder_sobp.mac  mird_head.mac  mird_head_sobp.mac  run.mac  sobp.mac  uniform_head.mac  uniform_head_sobp.mac  vis.mac
stageA_transport/src/: ActionInitialization.cc  BeamConfig.cc  BeamMessenger.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  OutputMessenger.cc  PrimaryGeneratorAction.cc  RunAction.cc  StageARun.cc  SteppingAction.cc  TrackingAction.cc
(+2 files in other folders)
